--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -9,3 +9,9 @@ repos:
     rev: 21.12b0
     hooks:
     -   id: black
+-   repo: https://github.com/pycqa/flake8
+    rev: '4.0.1'
+    hooks:
+        - id: flake8
+default_language_version:
+    python: python3.7
