--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -5,13 +5,11 @@ repos:
     -   id: check-yaml
     -   id: end-of-file-fixer
     -   id: trailing-whitespace
--   repo: https://github.com/psf/black
-    rev: 21.12b0
-    hooks:
-    -   id: black
 -   repo: https://github.com/pycqa/flake8
     rev: '4.0.1'
     hooks:
-        - id: flake8
+    -   id: flake8
+        args:
+            - --max-line-length=120
 default_language_version:
     python: python3.7
